--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -354,6 +354,12 @@
             <version>2.0.0</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>jahia-csrf-guard</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <build>
