--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -362,7 +362,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-csrf-guard</artifactId>
-            <version>2.0.0</version>
+            <version>2.1.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
     </dependencies>
