--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -340,7 +340,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-csrf-guard</artifactId>
-            <version>2.2.0</version>
+            <version>2.3.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
