--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -259,7 +259,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>profile</artifactId>
-            <version>8.1.0</version>
+            <version>8.2.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -289,7 +289,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>siteSettings</artifactId>
-            <version>8.6.0</version>
+            <version>8.7.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -345,7 +345,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>userDashboard</artifactId>
-            <version>8.4.0</version>
+            <version>8.5.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
