--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -235,7 +235,7 @@
             <!-- RESTful API -->
             <groupId>org.jahia.modules</groupId>
             <artifactId>jcrestapi</artifactId>
-            <version>3.1.0</version>
+            <version>3.2.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
