--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -369,7 +369,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-csrf-guard</artifactId>
-            <version>3.3.0</version>
+            <version>3.4.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
