--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -322,7 +322,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-csrf-guard</artifactId>
-            <version>4.1.0-SNAPSHOT</version>
+            <version>4.1.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
